# django-frozen-field

./: .coveragerc  .flake8  .pre-commit-config.yaml  CHANGELOG  README.md  demo.db  mypy.ini  pyproject.toml  tox.ini
demo/: admin.py  models.py  settings.py
demo/migrations/: 0001_initial.py  0002_alter_order_delivery_address.py  0003_alter_order_delivery_address.py
frozen/: apps.py  fields.py  serializers.py
frozen_data/: apps.py  exceptions.py  fields.py  mixins.py  models.py  serializers.py  types.py
frozen_field/: apps.py  exceptions.py  fields.py  models.py  serializers.py  settings.py  types.py
tests/: admin.py  conftest.py  models.py  settings.py  test_fields.py  test_mixins.py  test_models.py  test_serializers.py
tests/migrations/: 0001_initial.py  0002_alter_deepnestedmodel_frozen.py  0002_flatmodel_field_json.py
