[tool.poetry]
name = "django-frozen-field"
version = "0.1.beta8"
description = "Django model field used to store snapshot of data."
license = "MIT"
authors = ["YunoJuno <code@yunojuno.com>"]
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README.md"
homepage = "https://github.com/yunojuno/django-frozen-data"
repository = "https://github.com/yunojuno/django-frozen-data"
documentation = "https://github.com/yunojuno/django-frozen-data"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [{ include = "frozen_field" }]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.2"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
coverage = "*"
pylint = "*"
flake8 = "*"
flake8-bandit = "*"
flake8-docstrings = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
black = {version = "*", allow-prereleases = true}
freezegun = "*"
tox = "*"
ipython = "*"
flake8-print = "^4.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
